Fix Responsive Dark Mode

--- a/src/assets/styles/theme/_responsive.scss
+++ b/src/assets/styles/theme/_responsive.scss
@@ -36,6 +36,9 @@
         &__wrap{
             &__menu{
                 display: block !important;
+                &--menu{
+                    background-image: url('../../images/header-menu-white.svg') !important;
+                }
             }
         }
     }
